#49 Profile picture + choosen masterplan
